# jobapplicator

./: .gitignore  Makefile  README.md  README_INSTALL.md
backend/: pyproject.toml  requirements.txt
backend/app/: claude_worker.py  context_budget.py  db.py  docx_extract.py  docx_style_audit.py  evidence_source_discovery.py  file_import.py  gmail_application_classifier.py  gmail_application_search.py  gmail_client.py  gmail_settings.py  llm_providers.py  local_llm.py  local_llm_diagnostics.py  local_reset.py  main.py  master_resume_discovery.py  models.py  preflight.py  prompt_harness.py  provider_trace.py  resume_docx_renderer.py  resume_export.py  resume_suggestions.py  run_directory.py  run_import.py  schemas.py  settings.py  url_canonicalizer.py  word_handoff.py
backend/tests/: conftest.py  test_activity.py  test_api.py  test_applications.py  test_backup_and_reset_db.py  test_captures.py  test_claude_worker.py  test_context_budget.py  test_cors.py  test_docx_extract.py  test_email_links.py  test_evidence_banks.py  test_evidence_sources.py  test_files_open.py  test_gmail_application_classifier.py  test_gmail_application_search.py  test_gmail_integration.py  test_gmail_oauth.py  test_gmail_oauth_settings.py  test_gmail_sync_applications.py  test_jobs.py  test_llm_providers.py  test_local_llm.py  test_local_reset.py  test_manual_gmail_linking.py  test_master_resumes.py  test_model_relationships.py  test_preflight.py  test_prompt_harness.py  test_provider_trace.py  test_resume_docx_renderer.py  test_resume_export.py  test_resume_export_api.py  test_run_directory.py  (+11 more)
(+337 files in other folders)
