[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobapply-backend"
version = "0.1.0"
description = "Local-first job application cockpit backend."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "sqlalchemy>=2.0",
  "pydantic>=2",
  "uvicorn[standard]",
  "python-docx>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]
# Optional Gmail integration (task 082). Install with:
#     pip install -e .[gmail]
# Imports are lazy inside backend/app/gmail_client.py so the rest of the
# backend boots without these wheels present.
gmail = [
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.130",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
